--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Response from Me</title>
         <style>
@@ -39,7 +39,7 @@
 
             <section>
                 <p>Author: Giordano de Brito</p>
-                <img src="https://raw.githubusercontent.com/GIOdeBrito/simple-webserver-in-c/e067d2b6b374b332152c00c5f45f8214d7d768f9/assets/bol.png">
+                <img src="https://raw.githubusercontent.com/GIOdeBrito/simple-webserver-in-c/e067d2b6b374b332152c00c5f45f8214d7d768f9/public/bol.png" alt="baal">
             </section>
 
             <footer>
